--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -223,11 +223,11 @@ a.sidebar-nav-item:focus {
 
 /* Blue */
 .theme-base-0d .sidebar {
-  background-color: #6a9fb5;
+  background-color: #0080A9;
 }
 .theme-base-0d .content a,
 .theme-base-0d .related-posts li a:hover {
-  color: #6a9fb5;
+  color: #0080A9;
 }
 
 /* Magenta */
